# controllers

./: .gitignore  Cargo.toml  README.md  STEP_BY_STEP.md
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/controllers/app/: GamepadView.kt  MainActivity.kt  NativeBridge.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
controllers-core/: Cargo.toml
controllers-core/src/: client.rs  lib.rs  protocol.rs
src/: device.rs  discovery.rs  main.rs  protocol.rs  server.rs
