[package]
name = "controllers"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
evdev = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mdns-sd = "0.13"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
bitflags = "2"
